# simple_project

./: .gitignore  docker-compose.yaml
app/: Dockerfile  alembic.ini  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 0a8e8b2cf7b2_create_table_product.py
app/core/: __init__.py  config.py  database.py
app/core/celery/: app.py  tasks.py
app/core/database/postgresql/: connection.py
app/docker/containers/redis/: Dockerfile  redis.conf
app/models/: __init__.py
app/models/abc/: model.py
app/models/products/: model.py
